--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,16 @@
 @import url(sanitize.css);
+
+body{
+    background-color: #fafafa;
+}
 h1{
     font-size: 24px;
     margin:0;
 }
-div.content{
+.content{
+    background-color: white;
     width: 600px;
-    padding: 8px;
+    padding: 30px;
     margin:10px auto;
     border:1px solid #d1d1d1;
 }
@@ -13,7 +18,12 @@ input{
     border:none;
     border-bottom: 1px solid #d1d1d1;
     font-size: 16px; /* inputタグのfont-sizeは16px以上でないとiphoneで不具合が出てしまうらしい **/
-    padding:8px
+    padding:8px;
+    width:100%;
+}
+label{
+    display: block;
+    margin-bottom: .5em;
 }
 button{
     width: 100%;
@@ -23,4 +33,12 @@ button{
     padding: 15px;
     border-radius: 3px;
     box-shadow: 0 0 8px rgba(0,0,0, 0.4);
+}
+.required{
+    background-color: #fee;
+    color: #f33;
+    padding: 3px;
+    font-size: .9em;
+    font-weight: bold;
+    margin-left: .3em;
 }
