--- a/section3/css/style.css
+++ b/section3/css/style.css
@@ -15,6 +15,7 @@ header h1{
     font-size: 24px;
     font-weight: normal;
     text-align: center;
+    font-family: Arial;
 }
 
 .container{
@@ -23,3 +24,66 @@ header h1{
     box-shadow: 0 0 10px rgba(0,0,0,.3);
 }
 
+.description img{
+    float:left;
+    margin:0 10px 10px 0;
+}
+
+/* h2{
+    clear:left;
+} */
+
+span.type{
+    background-color: #e35a4d;
+    padding: 2px 3px;
+    color: white;
+    font-size: .6em;
+}
+.infomation{
+    display: flex;
+    align-items: center;
+}
+.infomation h1{
+    font-size: 18px;
+    margin:0 10px 0 0;
+}
+
+.songs{
+    clear:both;
+}
+
+a{
+    color: #666;
+}
+
+.songs h2{
+    font-size: 1em;
+    font-weight: normal;
+    margin: 0;
+    background-color: #e6e4dd;
+    padding: 5px 10px;
+}
+
+.songs ol{
+    padding: 0;
+    margin: 0;
+    list-style-position:inside;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.songs li{
+    border-bottom:  1px solid #ccc;
+    padding: 5px 10px;
+}
+
+section{
+    padding: 20px;
+    background-color: #fff;
+}
+
+footer{
+    text-align: center;
+    font-size: .8em;
+    padding: 5px;
+}
