--- a/section9/style.css
+++ b/section9/style.css
@@ -2,7 +2,7 @@
     text-align: center;
     margin: 30px auto;
 }
-.timer{
+#timer{
     font-size: 36px;
     border: 1px solid #ccc;
     margin: 30px auto;
@@ -11,4 +11,8 @@
     color: #fff;
     border-radius: 3px;
     box-shadow: 1px 1px 3px rgba(0,0,0,.5);
+}
+
+.btn{
+    width: 100%;
 }
